# pod5_

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
life_expectancy/: JN.ipynb  README.md  __init__.py  cleaning.py  enums.py  loaders.py  main.py
life_expectancy/data/: Country.DK_life_expectancy.csv
life_expectancy/notebooks/: extract_numeric.ipynb  notebook_to_test_things.ipynb  testing.py
life_expectancy/src/utils/: cleaning.py
life_expectancy/tests/: __init__.py  _cleaning.py  _loaders.py  conftest.py  create_fixture.py  test_cleaning.py  test_country_enum.py  test_loaders.py  test_main.py
life_expectancy/tests/fixtures/: pt_life_expectancy_expected.csv  pt_life_expectancy_expected_test.csv
life_expectancy/utils/: utils.py
