[project]
name = "assignments"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
description = "First assignment of the Foundations Learning Path"
authors = [
    {name = "Daniel Neves<daniel.neves@daredata.engineering>"}
]
dependencies = ["pandas"]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov"]

[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]


[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
   "invalid-name",
   "missing-function-docstring",
   "wrong-import-order",
   "trailing-whitespace"
   # Add any other checks you want to disable here
]

[tool.coverage.report]
fail_under = 80