[tool.poetry]
name = "assignments"
version = "0.0.1"
description = "First assignment of the Foundations Learning Path"
authors = ["Daniel Neves <daniel.neves@daredata.engineering>"]

# Dependencies and dev-dependencies go here
dependencies = {python = ">=3.8", pandas = "^1.3"}

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pylint = "^2.11"
pytest-cov = "^4.0"

[tool.poetry.scripts]
life_expectancy = "life_expectancy:main"

[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
   "invalid-name",
   "missing-function-docstring",
   "wrong-import-order",
   "trailing-whitespace",
   "redefined-outer-name"
   # Add any other checks you want to disable here
]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"